# ruff-linter-odoo

./: ChangeLog  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml  ruff.yml  tests.yml
src/ruff_linter_odoo/: __init__.py  cli.py  config.py  diagnostic.py  formatters.py  linter.py  visitor.py
src/ruff_linter_odoo/checkers/: __init__.py  odoo_checkers.py
tests/: __init__.py  test_main.py
