[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruff-linter-odoo"
version = "0.5.0"
description = "A modern, standalone linting tool for Odoo modules with Ruff-compatible output"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Skysize", email = "baa@skysize.io"}
]
keywords = ["odoo", "linter", "ruff", "static-analysis", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
]

[project.scripts]
ruff-linter-odoo = "ruff_linter_odoo.cli:main"

[project.urls]
Homepage = "https://github.com/skysize-io/ruff-linter-odoo"
"Bug Tracker" = "https://github.com/skysize-io/ruff-linter-odoo/issues"
Documentation = "https://github.com/skysize-io/ruff-linter-odoo#readme"
"Source Code" = "https://github.com/skysize-io/ruff-linter-odoo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119
target-version = ["py39"]

[tool.ruff]
line-length = 119
target-version = "py39"
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "testing/resources",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM"]
ignore = [
    "N802",    # Allow uppercase function names (required for AST visitor pattern: visit_Call, visit_Module, etc.)
    "SIM102",  # Allow nested if statements (often more readable than combining with and)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff-linter-odoo]
# Configuration for running ruff-linter-odoo on this repository itself.
# All keys are optional; see the README for the full list and defaults.

# Output format: text, json, sarif, github
output-format = "text"

# Path patterns to exclude (test fixtures are linted by the test suite only)
exclude = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "testing/resources",
]
